@@ -131,6 +131,7 @@
 - [export] Better handling of export to PHP array.
 - rfe #3158867 [privileges] No DROP DATABASE warning if you delete a user
 - [interface] Add link to documentation for status variables.
+- [security] Redirect external links to avoid Referer leakage.
 
 3.3.10.0 (not yet released)
 - patch #3147400 [structure] Aria table size printed as unknown,
